Include horizontal scrollbar's size in sizehint

Amends 8c18a245b0245de20c064cd53d03498088bd57df

Pick-to: 6.5
Fixes: QTBUG-123886
Change-Id: I1ae2e29ce12610e10a8c0640458a3812a926c4cc
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 0fa6660352df18134757a9c3f9dd329053e31cab)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 6b2cbb3fd600db286254df3ef6fc77da25107341)