tests/auto/widgets/widgets/qabstractscrollarea/tst_qabstractscrollarea.cpp
@@ -431,6 +431,18 @@ void tst_QAbstractScrollArea::sizeHint()
     QSize sizeHint = scrollArea.sizeHint();
     QCOMPARE(sizeHint, scrollArea.viewportSizeHint());
 
+    // check if the hScrollbar is taken into account
+    scrollArea.setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOn);
+    scrollArea.setVerticalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
+    QCOMPARE_GT(scrollArea.sizeHint().height(), scrollArea.viewportSizeHint().height());
+
+    // check if the vScrollbar is taken into account
+    scrollArea.setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
+    scrollArea.setVerticalScrollBarPolicy(Qt::ScrollBarAlwaysOn);
+    QCOMPARE_GT(scrollArea.sizeHint().width(), scrollArea.viewportSizeHint().width());
+
+    scrollArea.setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOn);
+
     scrollArea.setVerticalScrollBarPolicy(Qt::ScrollBarAlwaysOn);
     scrollArea.setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOn);
     const QSize sizeHintWithScrollBars = scrollArea.sizeHint();
